fix: openapi spec fixes
