# config/urls.py
@@ -30,9 +30,8 @@ urlpatterns = [
         "api/schema/redoc/",
         SpectacularRedocView.as_view(url_name="schema"),
         name="redoc",
-    ),
+    ), 
     # path("api/cart/", include("apps.cart.urls"), name="cart"),
-    path("api/auth/init-admin/", SecureAdminSetupView.as_view(), name="init-admin"),
     # path("api/orders/", include("apps.orders.urls"), name="orders"),
     # path("api/reviews/", include("apps.reviews.urls"), name="reviews"),
     # path("api/wishlist/", include("apps.wishlist.urls"), name="wishlist"),
